k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gearup-dev
  labels:
    app.kubernetes.io/part-of: gearup
